[tool.poetry]
name = "agentic-knowledge-graph-rag"
version = "0.1.0"
description = ""
authors = ["jjovalle <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"
langsmith = "^0.1.27"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
